Add WebFrameWidgetImpl::HitTestResultAt

WebWidget::HitTestResultAt is currently only implemented in
WebViewFrameWidget, which means it will not work within OOPIFs.

This adds an override to WebFrameWidgetImpl which will allow the
InputTargetClient interface to perform hit testing within OOPIF
processes.

Bug: 796227
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I815d19d70b607f55c3e1b02ffc683982514d7567
Reviewed-on: https://chromium-review.googlesource.com/834308
Commit-Queue: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525478}
Former-commit-id: 5cf69dfccd95c1eb49e10c61f823e1849975496a